--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-﻿asgiref==3.2.3
+asgiref==3.2.3
 asn1crypto==1.3.0
 astroid==2.3.3
 beautifulsoup4==4.9.1
@@ -14,23 +14,23 @@ idna==2.8
 isort==4.3.21
 lazy-object-proxy==1.4.3
 mccabe==0.6.1
-numpy==1.16.3
+numpy>=1.16.3
 oauthlib==3.1.0
-opencv-python==4.1.0.25
-Pillow==7.0.0
+opencv-python-headless>=4.3.0
+Pillow>=7.0.0
 pycparser==2.19
-PyJWT==1.7.1
+PyJWT>=1.7.1
 pylint==2.4.4
 python3-openid==3.1.0
 pytz==2019.3
-requests==2.22.0
+requests>=2.22.0
 requests-oauthlib==1.3.0
 selenium==3.141.0
-six==1.14.0
+six>=1.14.0
 social-auth-app-django==3.1.0
 social-auth-core==3.2.0
 soupsieve==2.0.1
 sqlparse==0.3.1
 typed-ast==1.4.1
-urllib3==1.25.8
+urllib3>=1.25.8
 wrapt==1.11.2
